--- a/themes/cintiapub/layout/_partial/header.ejs
+++ b/themes/cintiapub/layout/_partial/header.ejs
@@ -20,6 +20,7 @@
       <ul class="right">
         <li><a href="/about">About</a></li>
         <li><a href="/pdf/resume-cintia-romero.pdf" target="_blank">Resume</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
     </section>
   </nav>
