--- a/themes/cintiapub/layout/_partial/post/gallery.ejs
+++ b/themes/cintiapub/layout/_partial/post/gallery.ejs
@@ -1,11 +1,13 @@
-<% if (post.photos && post.photos.length){ %>
-<div class="article-gallery">
-  <div class="article-gallery-photos">
-    <% post.photos.forEach(function(photo, i){ %>
-      <a class="article-gallery-img fancybox" href="<%- url_for(photo) %>" rel="gallery_<%= post._id %>">
-        <img src="<%- url_for(photo) %>" itemprop="image">
-      </a>
-    <% }) %>
+<% if (post.image && post.image.length){ %>
+  <h3>Images</h3>
+  <div class="article-gallery image-grid">  
+    <div class="article-gallery-photos image-carousel">
+      <% if (post.image instanceof Array === false) { post.image = post.image.split('\n') } %>
+      <% post.image.forEach(function(photo, i){ %>
+        <a class="image-link" href="<%- url_for(photo) %>_h.jpg" title="<%= post.title %>" data-client="<%= post.tags.data[0].name %>" data-description="<%= post.description %>" data-software="<%= post.software %>" data-type="<%= post.type %>">
+          <img src="<%- url_for(photo) %>_n.jpg" itemprop="image">          
+        </a>   
+      <% }) %>
+    </div>
   </div>
-</div>
 <% } %>
