--- a/themes/cintiapub/layout/category.ejs
+++ b/themes/cintiapub/layout/category.ejs
@@ -1,1 +1,5 @@
-<%- partial('_partial/category', {pagination: 15, index: true}) %>
+<div class="row">
+    <div class="large-12 columns">
+        <%- partial('_partial/category', {pagination: 15, index: true}) %>
+    </div>
+</div>
