--- a/themes/cintiapub/layout/layout.ejs
+++ b/themes/cintiapub/layout/layout.ejs
@@ -1,12 +1,8 @@
 <%- partial('_partial/head') %>
 <body>
   <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
-  <section id="main">
-    <div class="row">
-      <div class="large-12 columns">
-        <%- body %>
-      </div>
-    </div>
+  <section id="main" class="<%- page.layout %>">
+    <%- body %>
   </section>
   <%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
   <%- partial('_partial/after-footer') %>
