--- a/themes/cintiapub/layout/_partial/post/software.ejs
+++ b/themes/cintiapub/layout/_partial/post/software.ejs
@@ -1,9 +1,10 @@
-<% if (post.software && post.software.length){ %>
-  <h3>Softwares</h3>
+<i class="item-icon fa fa-cogs fa-2x" aria-hidden="true"></i>
+<div class="item-content">
+  <h3>Software</h3>
   <ul>
     <% if (post.software instanceof Array === false) { post.software = post.software.split('\n') } %>
     <% post.software.forEach(function(software, i){ %>
       <li><%- software %></li>  
     <% }) %>
   </ul>
-<% } %>
+</div>
