--- a/themes/cintiapub/layout/_partial/post/title.ejs
+++ b/themes/cintiapub/layout/_partial/post/title.ejs
@@ -8,6 +8,16 @@
       <a class="<%= class_name %>" href="<%- url_for(post.path) %>"><%= post.title %></a>
     </h1>
   <% } else { %>
+    <% if (post.categories.length > 0) { %>
+      <% var field = post.field; 
+         var category = post.categories.data[0]; %> 
+      <div class="breadcrumbs <%- field.replace(' ', '-') %>">
+        <% if (field !== category.name) { %>
+          <a href="<%- url_for(field.replace(' ', '-')) %>"><%- titlecase(field) %></a> <i class="fa fa-angle-double-right" aria-hidden="true"></i> 
+        <% } %>
+        <a href="<%- url_for(category.path) %>"><%- titlecase(category.name) %></a>
+      </div>
+    <% } %>
     <h1 class="<%= class_name %>" itemprop="name">
       <%= post.title %>
     </h1>
