--- a/themes/cintiapub/layout/index.ejs
+++ b/themes/cintiapub/layout/index.ejs
@@ -1,1 +1,5 @@
-<%- partial('_partial/index', {index: true}) %>
+<div class="row">
+    <div class="large-12 columns">
+        <%- partial('_partial/index', {index: true}) %>
+    </div>
+</div>
