--- a/themes/cintiapub/layout/_partial/tag.ejs
+++ b/themes/cintiapub/layout/_partial/tag.ejs
@@ -1,5 +1,5 @@
 <section class="archives-wrap">
-  <h2 class="title"><%- page.tag %></h2>
+  <h1 class="breadcrumbed-title" itemprop="name"><%- titlecase(page.tag) %></h1>
   <div class="row">
     <div class="large-12 columns">
       <ul class="image-grid image-carousel small-block-grid-2 medium-block-grid-3 large-block-grid-4 text-center" data-clearing>
