--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -1,56 +1,121 @@
 <div class="row">
   <div class="large-12 columns">
+
+    <div class="row">
+      <div class="large-6 medium-6 columns">
+        <div class="breadcrumbs default box">
+          <h3>Hello, welcome to my portfolio!</h3>
+          <ul>
+              <li>I'm always excited to share, inspire and connect ideas to create something unique, and to ultimately make the end-user's life better. Let's share some ideas!</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   
-    <div class="content active" id="by-type">
-      <ul class="image-grid small-block-grid-2 medium-block-grid-3 large-block-grid-4 text-center">
+    <div class="content active fields" id="by-type">
+      <ul class="image-grid small-block-grid-2 medium-block-grid-4 large-block-grid-4 text-center">
         <li>
-          <div class="category-image home-group-1">
+          <div class="category-image home-graphic-design">
             <a href="/graphic-design" title="Graphic design">
               <img src="https://farm1.staticflickr.com/572/21778707603_59021da5ea_h.jpg" itemprop="image">
             </a>
             <div class="image-filter-background">
-              <h2>Graphic design</h2>
+              <h2 class="top">Graphic design</h2>
             </div>
           </div>
         </li>
 
         <li>
-          <div class="category-image home-group-2">
+          <div class="category-image home-web-design">
             <a href="/web-design" title="Web design">
               <img src="https://farm2.staticflickr.com/1713/25316011803_e57e0343d6_h.jpg" itemprop="image">
             </a>
             <div class="image-filter-background">
-              <h2>Web design</h2>
+              <h2 class="bottom">Web design</h2>
             </div>
           </div>
         </li>
 
         <li>
-          <div class="category-image home-group-3">
+          <div class="category-image home-ux-design">
             <a href="/categories/ux" title="UX design">
               <img src="https://farm1.staticflickr.com/695/22373809746_3947c530a6_h.jpg" itemprop="image">
             </a>
             <div class="image-filter-background">
-              <h2>UX design</h2>
+              <h2 class="top">UX design</h2>
             </div>
           </div>
         </li>
 
         <li>
-          <div class="category-image home-group-4">
+          <div class="category-image home-illustrations">
             <a href="/categories/illustrations" title="Illustrations">
               <img src="https://farm1.staticflickr.com/617/21315043768_e85b7ee555_h.jpg" itemprop="image">
             </a>
             <div class="image-filter-background">
-              <h2>Illustrations</h2>
+              <h2 class="bottom">Illustrations</h2>
             </div>
           </div>
-        </li>
-        
+        </li>        
       </ul>
+    </div>
 
+    <div class="designing">
+      <div class="row">
+        <div class="large-2 medium-3 small-12 columns">
+          <h3>designing with smile</h3>
+          <div class="breadcrumbs default box">
+            <ul>
+                <li>Make it simple but significant.</li>
+            </ul>
+            <div class="reviewer">Don Draper</div>
+          </div>
+        </div>
+
+        <div class="large-5 medium-9 small-12 columns item">
+          <i class="item-icon fa fa-arrows fa-2x" aria-hidden="true"></i>
+          <div class="item-content">
+              <ul>
+                  <li>I have been working with <b>Graphic Design</b> since 2010.</li>
+                  <li>I started in a Internship as a Graphic Designer Instructor, then I got promoted and continued giving classes for 4 years. It was a great time of my life.</li>
+                  <li>Later, I started working for agencies, companies, in freelancing projects and here I am, still loving my work and the design world.</li>
+              </ul>
+          </div>
+        </div>
+
+        <div class="large-5 large-offset-0 medium-9 small-12 columns item">
+          <i class="item-icon fa fa-pencil fa-2x" aria-hidden="true"></i>
+          <div class="item-content">
+              <ul>
+                  <li>Yeah! I've just finished my <b>UX Design</b> certificate at General Assembly, and I'm so excited to start this new step on my life.</li>
+                  <li>I've built a few projects and I can't wait to create more, combining my visual design skills with focus on the user experience!</li>
+              </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">      
+        <div class="large-5 large-offset-2 medium-9 medium-offset-3 small-12 columns item">
+          <i class="item-icon fa fa-laptop fa-2x" aria-hidden="true"></i>
+          <div class="item-content">
+              <ul>
+                  <li>I learned <b>Web Design</b> at an Adobe certificated school (in Brazil), and I soon got employed in web agencies, working with websites, e-learning, social media and at freelancer gigs.</li>
+                  <li>I also designed my blog and my website<./li>
+              </ul>
+          </div>
+        </div>
+
+        <div class="large-5 large-offset-0 medium-9 medium-offset-3 small-12 columns item">
+          <i class="item-icon fa fa-scissors fa-2x" aria-hidden="true"></i>
+          <div class="item-content">
+              <ul>
+                  <li>Besides design, I'm a <b>Fashion</b> lover. I have an MBA in Creative Directon for Fashion, and I love to be a fashion designer and stylist in my spare time, just for fun!</li>
+                  <li>I'm crazy about fashion sketches.</li>
+              </ul>
+          </div>
+        </div>
+      </div>    
     </div>
 
   </div>
-
 </div>
