--- a/themes/cintiapub/source/css/_image-hover.scss
+++ b/themes/cintiapub/source/css/_image-hover.scss
@@ -138,15 +138,24 @@ $global-radius: 4px;
       color: #f2f2f2;
       font-size: 1.5rem;
       transition: all 0.2s ease-in-out;
-      background: rgba(0,0,0,0.6);
+      background: black;
       position: relative;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%);
       text-transform: lowercase;
-      padding: 5px;
+      padding: 10px;
+
+      &.top {
+        top: 0;
+        margin: 0;
+      }
+
+      &.bottom {
+        bottom: 0;
+        margin: 0;
+        position: absolute;
+        width: 100%;
+      }
     }
+
 
   }
 
