--- a/themes/cintiapub/source/css/foundation/_settings.scss
+++ b/themes/cintiapub/source/css/foundation/_settings.scss
@@ -173,6 +173,7 @@ $small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})";
 
 $medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
 $medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})";
+$small-and-medium: "#{$screen} and (max-width:#{upper-bound($medium-range)})";
 
 $large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
 $large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})";
