finishing home page

--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -100,12 +100,12 @@
           <div class="item-content">
               <ul>
                   <li>I learned <b>Web Design</b> at an Adobe certificated school (in Brazil), and I soon got employed in web agencies, working with websites, e-learning, social media and at freelancer gigs.</li>
-                  <li>I also designed my blog and my website<./li>
+                  <li>I also designed my blog and my website.</li>
               </ul>
           </div>
         </div>
 
-        <div class="large-5 large-offset-0 medium-9 medium-offset-3 small-12 columns item">
+        <div class="large-5 large-offset-0 medium-9 medium-offset-3 small-12 columns item last-item">
           <i class="item-icon fa fa-scissors fa-2x" aria-hidden="true"></i>
           <div class="item-content">
               <ul>
@@ -117,5 +117,24 @@
       </div>    
     </div>
 
+  </div>
+</div>    
+
+<div class="collage">
+  <div class="row">
+    <div class="medium-8 columns">
+      <div class="row">
+        <div class="medium-12 columns collage-1"><div class="center">Fascinated by the creative process of design</div></div>
+      </div>
+      <div class="row">
+        <div class="medium-6 columns collage-3"><div class="center">Driven by curiosity</div></div>
+        <div class="medium-6 columns collage-4"><div class="center">Deconstructing complex problems into solid solutions</div></div>
+      </div>
+    </div>
+    <div class="medium-4 columns collage-2"><div class="center">Brazilian native that loves living in California</div></div>
+  </div>
+  <div class="row">
+    <div class="medium-6 columns collage-5"><div class="center">Blogger | <a href="http://cintialand.com" target="_blank">cintialand.com</a></div></div>
+    <div class="medium-6 columns collage-6"><div class="center">Restless thinker</div></div>
   </div>
 </div>
