--- a/themes/cintiapub/source/css/_image-hover.scss
+++ b/themes/cintiapub/source/css/_image-hover.scss
@@ -154,7 +154,11 @@ $global-radius: 4px;
         position: absolute;
         width: 100%;
       }
-    }
+
+      @media #{$small-and-medium} {
+        font-size: 1rem;
+      }
+    }    
 
 
   }
