fixing interstitial pages

--- a/themes/cintiapub/layout/graphic-design.ejs
+++ b/themes/cintiapub/layout/graphic-design.ejs
@@ -6,56 +6,56 @@
       <div class="content">
         <ul class="image-grid small-block-grid-2 medium-block-grid-3 large-block-grid-4 text-center">
           <li>
-            <div class="category-image home-group-1">
+            <div class="category-image subcat-graphic-design">
               <a href="/categories/posters" title="Posters">
                 <img src="https://farm1.staticflickr.com/572/21778707603_59021da5ea_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
-                <h2>Posters</h2>
+                <h2 class="middle">Posters</h2>
               </div>
             </div>
           </li>
 
           <li>
-            <div class="category-image home-group-2">
+            <div class="category-image subcat-graphic-design">
               <a href="/categories/brochures" title="Brochures">
                 <img src="https://farm6.staticflickr.com/5745/21439467621_b0b995312a_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
-                <h2>Brochures</h2>
+                <h2 class="middle">Brochures</h2>
               </div>
             </div>
           </li>
 
           <li>
-            <div class="category-image home-group-3">
+            <div class="category-image subcat-graphic-design">
               <a href="/categories/logos" title="Logos">
                 <img src="https://farm1.staticflickr.com/695/22373809746_3947c530a6_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
-                <h2>Logos</h2>
+                <h2 class="middle">Logos</h2>
               </div>
             </div>
           </li>
 
           <li>
-            <div class="category-image home-group-4">
+            <div class="category-image subcat-graphic-design">
               <a href="/categories/social-media" title="Social media">
                 <img src="https://farm6.staticflickr.com/5809/21456729876_df5374b2c1_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
-                <h2>Social media</h2>
+                <h2 class="middle">Social media</h2>
               </div>
             </div>
           </li>
 
           <li>
-            <div class="category-image home-group-5">
+            <div class="category-image subcat-graphic-design">
               <a href="/categories/labels-packages" title="Labels & packages">
                 <img src="https://farm6.staticflickr.com/5728/21243202188_96a4e1a1bb_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
-                <h2>Labels & packages</h2>
+                <h2 class="middle">Labels & packages</h2>
               </div>
             </div>
           </li>
