--- a/themes/cintiapub/layout/web-design.ejs
+++ b/themes/cintiapub/layout/web-design.ejs
@@ -6,23 +6,23 @@
       <div class="content">
         <ul class="image-grid small-block-grid-2 medium-block-grid-3 large-block-grid-4 text-center">
           <li>
-            <div class="category-image home-group-1">
+            <div class="category-image subcat-web-design">
               <a href="/categories/websites" title="Websites">
                 <img src="https://farm2.staticflickr.com/1713/25316011803_e57e0343d6_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
-                <h2>Websites</h2>
+                <h2 class="middle">Websites</h2>
               </div>
             </div>
           </li>
 
           <li>
-            <div class="category-image home-group-2">
+            <div class="category-image subcat-web-design">
               <a href="/categories/e-learning" title="E-learning">
                 <img src="https://farm1.staticflickr.com/698/21296049269_da873efdf3_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
-                <h2>E-learning</h2>
+                <h2 class="middle">E-learning</h2>
               </div>
             </div>
           </li>
