fixing  contact page

--- a/themes/cintiapub/source/css/_customizations.scss
+++ b/themes/cintiapub/source/css/_customizations.scss
@@ -516,6 +516,8 @@ section#main {
 	}	
 
 	.contact-form {
+		margin-top: 4rem;
+
 		textarea, input {
 			border-radius: 3px;
 			background-color: $smoke;
