--- a/themes/cintiapub/layout/contact.ejs
+++ b/themes/cintiapub/layout/contact.ejs
@@ -1,6 +1,18 @@
 <div class="row">
-    <div class="large-8 large-centered medium-8 medium-centered columns">
-      <%- page.content %>
+    <div class="large-8 large-centered medium-12 medium-centered columns">
+
+      <div class="row">
+        <div class="large-12 columns">
+          <div class="breadcrumbs default box">
+            <h3>Be welcome to contact me!</h3>
+            <ul>
+                <li>Let’s get in touch!</li>
+                <li>Drop me a line and I'll get back to you ASAP.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
 		  <form class="contact-form" action="https://formspree.io/cintiapub+contact@gmail.com" method="POST">
         <div class="row">
           <div class="medium-12 columns">
